<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlmasApp7</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="demo_fragment">Demo fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="movies_grid">Movies grid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="front_page_title">Homework 7</string>
    <string name="about_me_title">About me</string>
    <string name="my_name_title">My name:</string>
    <string name="my_name">Jose Ernesto Almas de Jesus Junior</string>
    <string name="class_session_title">Class session:</string>
    <string name="class_session">CSE 400</string>
    <string name="picture_title">A picture of me:</string>
    <string name="demo_frag_demo_dialog">Demo dialog</string>
    <string name="dialog_your_name">Your name:</string>
    <string name="dialog_your_name_hint">John Adams</string>
    <string name="dialog_your_rating">Your rating</string>
    <string name="dialog_want_to_buy">I want to buy a movie ticket</string>
    <string name="demo_frag_no_result">Complete the dialog form to see the result.</string>
    <string name="fragment_simple_1_welcome">Welcome to simple fragment 1</string>
    <string name="fragment_simple_2_welcome">Welcome to simple fragment 2</string>
    <string name="fragment_simple_1">Simple fragment 1</string>
    <string name="fragment_simple_2">Simple fragment 2</string>
</resources>
