<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.almasapp.hw7.almasapp7.FragmentMyDialog"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_your_name"
        android:layout_gravity="left" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_your_name_hint"
        android:id="@+id/editTextDialogName"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_your_rating"
        android:layout_gravity="left"
        android:layout_marginTop="14dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarDialog"
        android:numStars="5"
        android:stepSize="1"
        android:rating="0" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_want_to_buy"
        android:id="@+id/checkBoxDialog"
        android:checked="false"
        android:layout_marginTop="14dp" />

</LinearLayout>
